[project]
name = "uvtest"
version = "0.2.1"
description = "Test uv packaging with subpackages"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["uvtest*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = "src"
