[project]
name = "uvtest"
version = "0.3.0"
description = "Test uv packaging with subpackages"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["config", "packages", "services"]
include = ["*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["config", "packages", "services"]

[project.scripts]
uvtest-ingest = "services.data_ingestion.ingest_data:ingest"
